<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_video_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="50dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <EditText
            android:id="@+id/et_edit_video_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:width="200dp"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_edit_video_description"
            android:layout_width="match_parent"
            android:hint="@string/hint_description"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/et_edit_video_title" />

        <Spinner
            android:id="@+id/sp_edit_video_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:padding="20dp"

            app:layout_constraintTop_toBottomOf="@id/et_edit_video_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_edit_video_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_txt"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit_video_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_video_form" />

    <Button
        android:id="@+id/btn_edit_video_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_edit_video_edit"
        app:layout_constraintTop_toBottomOf="@+id/edit_video_form" />
    />
</androidx.constraintlayout.widget.ConstraintLayout>